# optimutils

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/optimutils/: __init__.py  utils.py
